# backend/storage/api-docs/api-docs.json
@@ -332,6 +332,94 @@
             }
         },
         "/api/loans": {
+            "get": {
+                "tags": [
+                    "Loans"
+                ],
+                "summary": "Lista todos os empréstimos cadastrados na API",
+                "description": "Lista todos os empréstimos cadastrados.",
+                "operationId": "da1da231dd673e1cd157ba27ce4f70c9",
+                "responses": {
+                    "200": {
+                        "description": "Loans list",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "string",
+                                            "example": "31c35de6-4d7f-65a7-2da9-8abcf3c44357"
+                                        },
+                                        "book": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "string",
+                                                    "example": "13b35be6-65a7-4d7f-9ad2-8caaf3c75344"
+                                                },
+                                                "title": {
+                                                    "type": "string",
+                                                    "example": "Book X"
+                                                },
+                                                "publisher": {
+                                                    "type": "string",
+                                                    "example": "Publisher Y"
+                                                },
+                                                "author": {
+                                                    "properties": {
+                                                        "id": {
+                                                            "type": "string",
+                                                            "example": "13b35be6-65a7-4d7f-9ad2-8caaf3c75344"
+                                                        },
+                                                        "name": {
+                                                            "type": "string",
+                                                            "example": "Autor Y"
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                }
+                                            },
+                                            "type": "object"
+                                        },
+                                        "loanDate": {
+                                            "type": "string",
+                                            "example": "2022-12-14"
+                                        },
+                                        "returnDate": {
+                                            "type": "string",
+                                            "example": "2022-12-21"
+                                        },
+                                        "returnedAt": {
+                                            "type": "string",
+                                            "example": "2022-12-21"
+                                        },
+                                        "lastRenewedAt": {
+                                            "type": "string",
+                                            "example": "2022-12-21"
+                                        },
+                                        "renewalCount": {
+                                            "type": "number",
+                                            "example": 0
+                                        },
+                                        "status": {
+                                            "type": "string",
+                                            "example": "active"
+                                        },
+                                        "createdAt": {
+                                            "type": "string",
+                                            "example": "2022-12-14T22:24:26+00:00"
+                                        },
+                                        "updatedAt": {
+                                            "type": "string",
+                                            "example": "2022-12-14T22:24:26+00:00"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "tags": [
                     "Loans"
@@ -724,6 +812,48 @@
                     }
                 },
                 "type": "object"
+            }
+        },
+        "responses": {
+            "400": {
+                "description": "Requisição com erro",
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "$ref": "#/components/schemas/Bad Request"
+                        }
+                    }
+                }
+            },
+            "401": {
+                "description": "Proibido",
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "$ref": "#/components/schemas/Forbidden Error"
+                        }
+                    }
+                }
+            },
+            "403": {
+                "description": "Não autorizado",
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "$ref": "#/components/schemas/Unauthorized Error"
+                        }
+                    }
+                }
+            },
+            "500": {
+                "description": "Erro interno",
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "$ref": "#/components/schemas/Internal server error"
+                        }
+                    }
+                }
             }
         }
     },
